name:                FRPCopter
version:             0.1.0.0
synopsis:            A helicepter-game implemented in Haskell using Functional Reactive Programming-style
license-file:        LICENSE
author:              Andreas Granstroem
maintainer:          andreas.granstrom@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable copter
  default-language: Haskell2010
  default-extensions:
        Arrows
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        GeneralizedNewtypeDeriving
  hs-source-dirs:      src/
  main-is:             Main.hs
  ghc-options: -rtsopts -threaded -O2
  build-depends:       
    base == 4.6.*, 
    transformers == 0.3.*, 
    containers == 0.5.*, 
    netwire == 5.0.*, 
    SDL == 0.6.*, 
    SDL-ttf == 0.6.*,
    SDL-gfx == 0.6.*,
    SDL-image == 0.6.*,
    linear == 1.3.*,
    mtl == 2.1.*,
    random == 1.0.*,
    time == 1.4.*,
    MonadRandom == 0.1.*
