name:                FRPCopter
version:             0.1.0.0
synopsis:            A helicepter-game implemented in Haskell using Functional Reactive Programming-style
license-file:        LICENSE
author:              Andreas Granstroem
maintainer:          andreas.granstrom@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable copter
  default-language: Haskell2010
  default-extensions:
        Arrows
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        GeneralizedNewtypeDeriving
  hs-source-dirs:      src/
  main-is:             Main.hs
  other-modules: Extra
  ghc-options: -rtsopts -threaded -O2
  build-depends:       
    base, 
    transformers,
    containers,
    netwire,
    SDL == 0.6.*, 
--    SDL-ttf,
    SDL-gfx,
    SDL-image,
    linear,
    mtl,
    random,
    time,
    MonadRandom
