name:                FRPTetris
version:             0.1.0.0
synopsis:            A Tetris-game implemented in Haskell using Functional Reactive Programming-style
license-file:        LICENSE
author:              Andreas Granstroem
maintainer:          andreas.granstrom@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable tetris
  default-language: Haskell2010
  default-extensions:
        Arrows
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
  hs-source-dirs:      src/
  main-is:             Main.hs
  ghc-options: -rtsopts -threaded
  build-depends:       
    base ==4.6.*, 
    transformers ==0.3.*, 
    containers ==0.5.*, 
    netwire ==5.0.*, 
    SDL ==0.6.*, 
    SDL-ttf ==0.6.*,
    SDL-gfx == 0.6.*,
    lens == 3.10.*,
    linear == 1.3.*,
    matrix == 0.2.*,
    mtl == 2.1.*,
    random,
    time
